welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:6: error: ')' expected but ';' found.
if( x!=7 ; y!=7){
         ^ColumnByColumn:6: error: ';' expected but ')' found.
if( x!=7 ; y!=7){
               ^